# Qbitalabs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  QBitaLabs_readme.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_proposal.md
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
configs/: default.yaml  development.yaml  production.yaml
configs/training/: m4_mac.yaml
data/: README.md
deployment/kubernetes/manifests/: api-deployment.yaml  namespace.yaml  workers.yaml
docs/: api-reference.md  architecture.md  contributing.md  getting-started.md  index.md
docs/demos/: live_demo_checklist.md
docs/demos/scripts/: drug_discovery_demo.py
examples/: quickstart.py
experiments/: README.md
experiments/results/: improvement_tracker.md
investor-moat/: README.md
investor-moat/01-problem-validation/: healthcare_inefficiency.md
investor-moat/02-technical-moat/: quantum_advantage.md
investor-moat/03-energy-efficiency-proof/: 100x_efficiency_claim.md
investor-moat/03-energy-efficiency-proof/benchmarks/: power_consumption_tests.py
notebooks/: 01_molecular_simulation.ipynb  02_drug_discovery.ipynb  03_digital_twin_demo.ipynb  04_swarm_optimization.ipynb  05_aging_analysis.ipynb
planning/business-plan/: 00_executive_summary.md  stealth_strategy.md
planning/competitive-analysis/: competitive_landscape.md
planning/due-diligence/: dd_preparation.md
planning/financials/: financial_model.md
planning/investor-materials/: sponsor_pitch_2026.md
planning/investor-research/: target_investors.md
planning/partnership-strategy/: partnership_playbook.md
planning/pitch-materials/: pitch_deck_content.md
planning/strategy/: big_problems_brainstorm.md  moat_analysis_2026.md
scripts/: deploy.sh  run_tests.sh  setup_env.sh  setup_mvp.sh
scripts/agent/: daily_agent.py  daily_agent.sh  enhanced_daily_agent.py  setup_automation.sh
scripts/cloud/: scale_to_cloud.py
scripts/data/: download_all.py  download_all.sh
scripts/demo/: investor_demo.py  investor_demo.sh
scripts/research/: literature_tracker.py
scripts/train/: train_mvp.py  train_mvp.sh
src/qbitalabs/: __init__.py
src/qbitalabs/api/: __init__.py
src/qbitalabs/autonomous/: __init__.py
src/qbitalabs/bio_rfm/: __init__.py
src/qbitalabs/biology/: __init__.py
src/qbitalabs/core/: __init__.py  base.py  config.py  exceptions.py  registry.py  types.py
src/qbitalabs/data/: __init__.py  validation.py
src/qbitalabs/digital_twin/: __init__.py  engine.py
src/qbitalabs/digital_twin/models/: __init__.py
src/qbitalabs/foundation/: __init__.py
src/qbitalabs/models/: __init__.py
src/qbitalabs/monitoring/: __init__.py
src/qbitalabs/neuromorphic/: __init__.py
src/qbitalabs/neuromorphic/backends/: __init__.py  akida_backend.py  base_backend.py  loihi_backend.py  simulator_backend.py  synsense_backend.py
src/qbitalabs/neuromorphic/snn/: __init__.py
src/qbitalabs/quantum/: __init__.py
src/qbitalabs/quantum/backends/: __init__.py  base_backend.py  cirq_backend.py  ionq_backend.py  pennylane_backend.py  qiskit_backend.py  simulator_backend.py
src/qbitalabs/quantum/chemistry/: __init__.py  molecular_hamiltonian.py  vqe_solver.py
src/qbitalabs/quantum/circuits/: __init__.py  qaoa.py  variational.py
src/qbitalabs/sdk/: __init__.py
src/qbitalabs/swarm/: __init__.py  base_agent.py  coordinator.py  message_bus.py  orchestrator.py  swarm_fabric.py
src/qbitalabs/swarm/agents/: __init__.py  cohort_agent.py  hypothesis_agent.py  literature_agent.py  molecular_agent.py  pathway_agent.py  patient_risk_agent.py  trial_design_agent.py  validation_agent.py
src/qbitalabs/swarm/patterns/: __init__.py  ant_colony.py  hierarchical.py  particle_swarm.py  protein_swarm.py  stigmergy.py
src/qbitalabs/training/: __init__.py
src/qbitalabs/workflows/: __init__.py
tests/: __init__.py  conftest.py  test_quantum.py  test_swarm.py
tests/e2e/: __init__.py  test_api_workflows.py
tests/integration/: __init__.py  test_data_pipeline.py  test_swarm_quantum.py
tests/unit/: __init__.py  test_core.py  test_digital_twin.py  test_monitoring.py  test_neuromorphic.py  test_sdk.py  test_training.py  test_validation.py
