[project]
name = "qbitalabs"
version = "0.1.0"
description = "Quantum-Bio Swarm Intelligence Platform - Swarm intelligence for quantum biology and human health"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Neeraj Kumar", email = "neeraj@qbitalabs.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["quantum computing", "swarm intelligence", "drug discovery", "digital twin", "neuromorphic"]

dependencies = [
    # Core
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",

    # ML/AI
    "torch>=2.0",
    "transformers>=4.30",
    "torch-geometric>=2.3",

    # Agents
    "langchain>=0.1",
    "langgraph>=0.0.30",
    "anthropic>=0.25",

    # Quantum - Qiskit (IBM)
    "qiskit>=1.0",
    "qiskit-ibm-runtime>=0.20",
    "qiskit-nature>=0.7",
    "qiskit-algorithms>=0.3",

    # Quantum - Cirq (Google)
    "cirq>=1.3",
    "cirq-google>=1.3",
    "openfermion>=1.6",
    "openfermionpyscf>=0.5",

    # Quantum - PennyLane
    "pennylane>=0.35",
    "pennylane-qiskit>=0.35",

    # Chemistry
    "rdkit>=2023.3",
    "biopython>=1.81",
    "pyscf>=2.3",

    # Neuromorphic
    "brian2>=2.5",

    # API
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "pydantic>=2.0",
    "websockets>=11.0",

    # Data
    "pyarrow>=12.0",
    "h5py>=3.8",

    # Utils
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.9",
    "structlog>=23.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "black>=23.3",
    "ruff>=0.0.270",
    "mypy>=1.3",
    "pre-commit>=3.3",
    "ipykernel>=6.23",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "httpx>=0.24",
]
neuromorphic = [
    "akida>=2.0",
    "cnn2snn>=1.0",
]
ionq = [
    "cirq-ionq>=1.0",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.1",
    "mkdocstrings>=0.22",
    "mkdocstrings-python>=1.1",
]

[project.urls]
Homepage = "https://qbitalabs.com"
Documentation = "https://docs.qbitalabs.com"
Repository = "https://github.com/qbitalabs/qbitalabs"
Issues = "https://github.com/qbitalabs/qbitalabs/issues"

[project.scripts]
qbita = "qbitalabs.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qbitalabs = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "TRY003",  # long exception messages
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["qbitalabs"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "cirq.*",
    "pennylane.*",
    "openfermion.*",
    "rdkit.*",
    "brian2.*",
    "akida.*",
    "torch_geometric.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-ra",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quantum: marks tests requiring quantum hardware/simulators",
    "neuromorphic: marks tests requiring neuromorphic hardware",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/qbitalabs"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
